# limbus_realtime_translation

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.emulator.yml  docker-compose.yml  main.py  project.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
client/: __init__.py  app.py  audio_stream.py  config.py  glossary.py  publisher.py  speech_loop.py  translator.py
server/: README.md  __init__.py  app.py  config.py  models.py  project.toml  render.yaml  repository.py  requirements.txt  server.py
server/templates/: index.html
tests/: conftest.py  test_firestore_emulator.py  test_server.py
